--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
-server.port=9939
+
+server.port=9600
+spring.application.name = devops-sandbox-website
+# SQL Server
+spring.datasource.url=jdbc:sqlserver://#{DBServer}#;databaseName=#{databasename}#
+spring.datasource.username=#{username}#
+spring.datasource.password=dbpassdev
+spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
+spring.jpa.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
+
